# rescue_robots_cad

iai_rescue_human_operator/: CMakeLists.txt  package.xml
iai_rescue_human_operator/launch/: spawn_operator.launch  spawn_simple_wasp.launch
iai_rescue_human_operator/meshes/: operator_capsule.stl
iai_rescue_human_operator/sdf/: sherpa_human_dummy_sphere.sdf
iai_rescue_human_operator/urdf/: operator.xacro
iai_rescue_quadrotor/launch/: spawn_simple_wasp.launch
iai_rescue_quadrotor/urdf/: simple_quadrotor.xacro
iai_rescue_rmax/: CMakeLists.txt  package.xml
iai_rescue_rmax/launch/: spawn_rmax  spawn_rmax.launch  upload_rmax.launch
iai_rescue_rmax/meshes/: rmax.dae
iai_rescue_rmax/urdf/: rmax.urdf  rmax.urdf.xacro  rmax.xacro
iai_rescue_robots/: CMakeLists.txt  package.xml  sherpa.rviz
iai_rescue_robots/launch/: sherpa_rviz.launch  spawn_sherpa_mountain2.launch
iai_sherpa_box/: CMakeLists.txt  package.xml
iai_sherpa_box/config/: box.yaml
iai_sherpa_box/launch/: spawn_box.launch  upload.launch
iai_sherpa_box/meshes/: Box_COL.stl  Box_VIS.dae
iai_sherpa_box/urdf/: box.gazebo..urdf.xacro  box.gazebo.urdf.xacro  box.urdf.xacro  box.xacro
iai_sherpa_donkey/: CMakeLists.txt  package.xml
iai_sherpa_donkey/config/: donkey_control.yaml  donkey_control.yaml~
iai_sherpa_donkey/launch/: spawn_donkey.launch  spawn_donkey_new.launch  spawn_donkey_old.launch  upload_donkey.launch
iai_sherpa_donkey/meshes/: Arm_Base.dae  Arm_Gripper.dae  Arm_Part_1.dae  Arm_Part_2.dae  Body.dae  Box.dae  Loose_Wheel.dae  Main_Wheel.dae  arm_base_col.stl  body_col.stl  (+18 more)
(+28 files in other folders)
