<?xml version="1.0"?>
<package>
  <name>iai_rescue_robots</name>
  <version>0.8.0</version>
  <description>The iai_rescue_robots metapackage contains a set of robot descriptions that are used in the sherpa project. It contains robots and coresponding gazebo packages.
    Each package contains a Bringup script to load the robot_description into the desired namespace.
    
    </description>
  <maintainer email="bbrieber@cs.uni-bremen.de">Benjmian Brieber</maintainer>

  
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>iai_rescue_donkey</run_depend>
  <run_depend>iai_rescue_quadrotor</run_depend>
  <run_depend>iai_rescue_box</run_depend>
  <run_depend>iai_rescue_rmax</run_depend>
  <run_depend>iai_rescue_human_operator</run_depend>
  
  <export>
    <!--
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}/.." gazebo_resource_path="${prefix}/..:${prefix}/resource" gazebo_model_path="${prefix}/.."/>
    -->
  </export>
</package>